force-app/main/default/objects/Attendence__c/Attendence__c.object-meta.xml
<CustomObject>
    <label>Attendence</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendence</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>