force-app/main/default/objects/Attendence__c/fields/Date_Of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Joining__c</fullName>
    <label>Date Of Joining</label>
    <type>Date</type>
</CustomField>