force-app/main/default/objects/Attendence__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Science/Data Analyst</fullName>
            </value>
            <value>
                <fullName>Java(Full Stack)</fullName>
            </value>
            <value>
                <fullName>Mern Stack</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>