force-app/main/default/objects/Attendence__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <label>Email Id</label>
    <required>true</required>
    <type>Email</type>
</CustomField>