force-app/main/default/objects/Attendence__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Task Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>