force-app/main/default/objects/Attendence__c/validationRules/Date_field_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_field_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    
    NOT(
         (Date__c) = TODAY() 
    )
)</errorConditionFormula>
    <errorMessage>Put Current Date</errorMessage>
</ValidationRule>