force-app/main/default/objects/Attendence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_ID__c</columns>
    <columns>Email_Id__c</columns>
    <columns>Domain__c</columns>
    <columns>Date_Of_Joining__c</columns>
    <filterScope>ScopingRule</filterScope>
    <label>All</label>
</ListView>